--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.2.0"
   }
 }
