--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "prettier": "^2.2.1"
   },
   "resolutions": {
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "cheerio": "1.0.0-rc.12"
   }
 }
